- Moved focus to be on the modal - Switched from display: none to visibility: hidden to fix issue with VoiceOver

--- a/src/ace/ace-styles.css
+++ b/src/ace/ace-styles.css
@@ -145,7 +145,7 @@ ace-modal {
   }
 }
 ace-modal:not([ace-modal-visible]) {
-  display: none;
+  visibility: hidden;
 }
 
 [ace-modal-is-visible] {
